# krazer_oop_01

./: .gitignore  CMakeLists.txt  main.cpp
headers/: iterator.h  linked_list.h  node.h  object.h
